--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
 
         <div id="first_correct_fb" style='display: none;'>
-          <div class='flex_parent_column margin_op_16'>
+          <div class='flex_parent_column margin_top_16'>
             <div class = 'center_children_div fb_correct margin_top_16'>
               <div class='flex_left_align'><img class = 'sm_icon' src="images/info_24px_rounded.png"><h3 class="margin-left-5">Correct!</h3></div>
               <p class="p2 margin-left-30">Ideal Gas Equation describes the relationship between pressure, volume, number of molecules, constant and temperature.</p>
@@ -124,7 +124,7 @@
         </div>
 
         <div id="second_correct_fb" style='display: none;'>
-          <div class='flex_parent_column margin_op_16'>
+          <div class='flex_parent_column margin_top_16'>
             <div class = 'center_children_div fb_correct margin_top_16'>
               <div class='flex_left_align'><img class = 'sm_icon' src="images/info_24px_rounded.png"><h3 class="margin-left-5">Correct!</h3></div>
               <p class="p2 margin-left-30">P is pressure, V is volume, T is temperature.</p>
@@ -133,7 +133,7 @@
       </div>
 
         <div id="second_incorrect_fb" style='display: none;'>
-          <div class='flex_parent_column margin_op_16'>
+          <div class='flex_parent_column margin_top_16'>
             <div class = 'center_children_div fb_incorrect margin_top_16'>
               <div class='flex_left_align'><img class = 'sm_icon' src="images/info_24px_rounded.png"><h3 class="margin-left-5">Incorrect!</h3></div>
               <p class="p2 margin-left-30">P is pressure, V is volume, T is temperature. It should be D.</p>
@@ -156,7 +156,7 @@
         </div>
 
         <div id="third_correct_fb" style='display: none;'>
-          <div class='flex_parent_column margin_op_16'>
+          <div class='flex_parent_column margin_top_16'>
             <div class = 'center_children_div fb_correct margin_top_16'>
               <div class='flex_left_align'><img class = 'sm_icon' src="images/info_24px_rounded.png"><h3 class="margin-left-5">Correct!</h3></div>
               <p class="p2 margin-left-30">Compress means compress the volume and increases the pressure. According to Idea Gas Equation, PV=nRT, when P increases, T goes up.</p>
@@ -165,7 +165,7 @@
     </div>
 
     <div id="third_incorrect_fb" style='display: none;'>
-      <div class='flex_parent_column margin_op_16'>
+      <div class='flex_parent_column margin_top_16'>
         <div class = 'center_children_div fb_incorrect margin_top_16'>
           <div class='flex_left_align'><img class = 'sm_icon' src="images/info_24px_rounded.png"><h3 class="margin-left-5">Incorrect!</h3></div>
           <p class="p2 margin-left-30">Compress means compress the volume and increases the pressure. According to Idea Gas Equation, PV=nRT, when P increases, T goes up. It should be A.</p>
