Change the margin of quiz and test

--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
 
 
   <!--the expert vetting page-->
-  <div class='quiz'>
   <div class='changing_frame' id = 'first_quiz' style='display: none;'>
     <h1> Quiz: Ideal Gas Equation </h1>
     <br>
-
+    <div class='quiz'>
     <!--first question-->
     <div class="first_quiz">
       <h3>What is ideal gas equation?</h3>
@@ -285,7 +284,7 @@
   <!--@Ruwen, post test is also here-->
   <div class='changing_frame' id = 'post_assess' style='display: none;'>
      <h1> Final Test </h1><br>
-
+     <div class='quiz'>
      <!--first question-->
      <h3>What air does the compressor emit?</h3>
       <div class="p2">
@@ -369,8 +368,7 @@
         <br>
       <div class='flex_parent margin_top_34' id='submit'><button onclick='change_to_final_score()' class='main-btn'><span>Submit</span></button></div>
   </div>
-
-
+</div>
 
   <!--final score-->
   <div class='changing_frame' id = 'final_score' style='display: none;'>
