Adjust the space

--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
   <div class='changing_frame' id = 'first_quiz' style='display: none;'>
     <h1> Quiz: Ideal Gas Equation </h1>
     <br>
+    <br>
+    <br>
     <div class='quiz'>
     <!--first question-->
     <div class="first_quiz">
@@ -111,6 +113,8 @@
         </div>
       </div>
     </div>
+      <br>
+      <br>
       <br>
 
     <!--second question-->
@@ -144,6 +148,8 @@
     </div>
 
     <br>
+    <br>
+    <br>
 
     <!--third question-->
     <div class='third_quiz'>
@@ -174,6 +180,9 @@
 </div>
 </div>
     <br>
+    <br>
+    <br>
+
 
     <div class='flex_parent margin_top_34' id='submit'><button onclick='check_first_quiz_answer(); check_second_quiz_answer(); check_third_quiz_answer(); quiz_submit();' class='main-btn'><span>Submit</span></button></div>
 
@@ -283,7 +292,7 @@
 
   <!--@Ruwen, post test is also here-->
   <div class='changing_frame' id = 'post_assess' style='display: none;'>
-     <h1> Final Test </h1><br>
+     <h1> Final Test </h1><br><br><br>
      <div class='quiz'>
      <!--first question-->
      <h3>What air does the compressor emit?</h3>
@@ -294,6 +303,8 @@
           <input type="radio" name="question1" value="D">Cold Liquid<br>
        </div>
        <br>
+       <br>
+       <br>
 
        <h3>What air does the evaporator emit?</h3>
         <div class="p2">
@@ -302,6 +313,8 @@
          <input type="radio" name="question2" value="C">Hot Liquid<br>
          <input type="radio" name="question2" value="D">Cold Liquid<br>
         </div>
+        <br>
+        <br>
         <br>
 
        <h3>What does the condenser emit?</h3>
@@ -312,6 +325,8 @@
           <input type="radio" name="question3" value="D">Cold Liquid<br>
         </div>
         <br>
+        <br>
+        <br>
 
         <h3>How does the volume change when pressure goes up?</h3>
         <div class="p2">
@@ -320,6 +335,8 @@
           <input type="radio" name="question4" value="C">It will rise then increase<br>
           <input type="radio" name="question4" value="D">It will not be affected<br>
         </div>
+        <br>
+        <br>
         <br>
 
         <h3>How does the temperature change when pressure goes up? (volume is constant)</h3>
@@ -330,6 +347,8 @@
           <input type="radio" name="question5" value="D">It will not be affected<br>
         </div>
         <br>
+        <br>
+        <br>
 
         <h3>How does the ambient temperature change when a liquid becomes a gas?</h3>
         <div class="p2">
@@ -338,6 +357,8 @@
           <input type="radio" name="question6" value="C">It will rise then increase<br>
           <input type="radio" name="question6" value="D">It will not be affected<br>
         </div>
+        <br>
+        <br>
         <br>
 
         <h3>How does molecule movement change when temperature goes up?</h3>
@@ -348,6 +369,8 @@
           <input type="radio" name="question7" value="D">It will not be affected<br>
         </div>
         <br>
+        <br>
+        <br>
 
         <h3>Does heat need when changing liquid to gas?</h3>
         <div class="p2">
@@ -356,6 +379,8 @@
           <input type="radio" name="question8" value="C">Yes, it absorbs the heat<br>
           <input type="radio" name="question8" value="D">It is not related to the heat<br>
         </div>
+        <br>
+        <br>
         <br>
 
         <h3>Air conditioners use the principle of (    ) the ambient temperature by absorbing heat when the (    ) refrigerant changes its state to gas. Please choose the best answers to the blank.</h3>
@@ -366,6 +391,9 @@
           <input type="radio" name="question9" value="D">lowering, gases<br>
         </div>
         <br>
+        <br>
+        <br>
+
       <div class='flex_parent margin_top_34' id='submit'><button onclick='change_to_final_score()' class='main-btn'><span>Submit</span></button></div>
   </div>
 </div>
