--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 
     <div class='name_parent flex_parent_column'>
       <p class='p1 center_children'>Your Team score: 80/100</p>
-      <p class='p1 center_children'>It is the average of the other two students’ score</p>
+      <p class='p1 center_children'>It is the average of the other two students’ score and yours</p>
 
       <div class="flex_parent margin_top_34">
         <div class='name_tag' id = 'name_tag1'><h3>Anonymous Bear</h3></div>
